# mirrormart

./: .gitignore  CLAUDE.md  lessons.md  progress.txt  pyproject.toml
docs:/: 01_PRD.md  02_TECH_SPEC.md  03_FRONTEND_GUIDELINES.md  04_BACKEND_STRUCTURE.md  05_APP_FLOW.md  06_STATE_MANAGEMENT.md
outputs/run_20260309_212618/: aggregated_results.json  analysis.md  config.json
outputs/run_20260309_212618/branch_0/: agent_states.json  events.jsonl  summary.json
outputs/run_20260309_212618/branch_1/: agent_states.json  events.jsonl  summary.json
outputs/run_20260309_212618/branch_2/: events.jsonl
outputs/run_20260309_212618/branch_3/: events.jsonl  summary.json
outputs/run_20260309_212618/branch_4/: events.jsonl  summary.json
outputs/run_20260309_233541/: aggregated_results.json  analysis.md  config.json
outputs/run_20260309_233541/branch_0/: agent_states.json  events.jsonl  summary.json
outputs/run_20260309_233541/branch_1/: agent_states.json  events.jsonl  summary.json
outputs/run_20260309_233541/branch_2/: events.jsonl
outputs/run_20260310_000517/: aggregated_results.json  analysis.md  config.json
outputs/run_20260318_212409/: aggregated_results.json  analysis.md  config.json
profiles/: impulsive_buyer.yml  ingredient_nerd.yml  kol_beauty.yml  lurker.yml  price_hunter.yml  rational_buyer.yml
scenarios/: facemask_launch.yml  facemask_quick.yml
src/mirrormart/: __init__.py  __main__.py  agent.py  analysis.py  config.py  engine.py  llm.py  reflect.py
src/mirrormart/api/: __init__.py  (+2 more)
tests/: test_llm.py  test_phase1.py  test_platforms.py
(+39 files in other folders)
