[project]
name = "mirrormart"
version = "0.1.0"
description = "镜市 MirrorMart — 开源的中国社会模拟引擎"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.4",
    "fastapi>=0.135.1",
    "litellm>=1.82.0",
    "pyyaml>=6.0.3",
    "redis>=7.3.0",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
